--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
+<!doctype html>
+<html lang="fr">
 
+<head>
+  <meta charset="utf-8">
+  <title>Hallay Team</title>
+  <link rel="icon" type="image/png" href="/img/fav.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="title">
+    <h2>Hallay Team</h2>
+  </div>
+  <div class="marquee">
+    <p><strong>PROJETS TEMPORAIREMENT ARRÊTÉS !</strong> Nous terminons les projets lancés avant le 31 août 2023. Nous
+      ne prendrons aucun nouveau projet jusqu'à nouvel ordre</p>
+  </div>
+  <main>
+    <div class="carousel">
+      <div class="card">
+        <img src="/img/dclm.png" alt="Du Coeur à la Main Website" class="card-image">
+        <h2 class="card-title">Du Coeur à la Main</h2>
+        <div class="card-info">
+          <p>Date de début : 20/10/2022</p>
+          <p><strong>Description : </strong><br>Un site vitrine pour une énergéticienne. Sur ce site, nous avons
+            travaillé avec le client pour que son site puisse lui correspondre à 100%. Le premier projet de la Hallay
+            Team en terme de site Web</p>
+          <div class="badge en-cours">En cours</div>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="img/unicornlogo.png" alt="UnicornCorp Logo" class="card-image">
+        <h2 class="card-title">Unicorncorp Stream</h2>
+        <div class="card-info">
+          <p>Date de début : 01/08/2023</p>
+          <div class="badge en-cours">En cours</div>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/projectcycle.jpg" alt="Un projet ?" class="card-image">
+        <h2 class="card-title">Un projet ?</h2>
+        <div class="card-info">
+          <p>Contactez-nous !</p>
+        </div>
+      </div>
+
+  </main>
+</body>
+
+</html>
